Fixed running native commands